Apply automatic formatting from pre-commit build
- Applied OpenRewrite auto-formatting rules
- Fixed import ordering
- Normalized line breaks and whitespace

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>